# climate

./: .gitignore  .ocamlformat  Alice.toml  CHANGES.md  README.md  climate.opam  climate_cmdliner.opam  climate_tests.opam  dune-project  dune-workspace  x.sh
.github/workflows/: test.yml
climate/src/: ansi_style.mli  built_in.mli  climate_stdlib.ml  command_line.mli  completion.mli  error.mli  manpage.ml  name.mli  spec.ml
dune.lock/: dune-configurator.pkg  lock.dune  ocaml-base-compiler.pkg  ocaml-compiler.pkg  ocaml.pkg  ppxlib_jane.pkg
examples/: dune  echo_ansi.ml  fake_git.ml  fib.ml  group.ml  hello.ml  op.ml  optional_args.ml  sum.ml  sum2.ml
src/: ansi_style.ml  arg_table.ml  arg_table.mli  autocompletion.ml  autocompletion.mli  autocompletion2.ml  autocompletion2.mli  built_in.ml  climate.ml  climate.mli  climate_stdlib.ml  climate_stdlib.mli  command.ml  command_doc_spec.mli  completion.ml  completion.mli  completion_spec.ml  completion_spec.mli  dune  error.ml  error.mli  for_test.ml  help.ml  help.mli  import.ml  info.ml  info.mli  lib.ml  lib.mli  manpage.mli  name.ml  name.mli  raw_arg_table.ml  shell_dsl.ml  shell_dsl.mli  spec.ml  spec.mli  term.ml  term.mli
src/climate/: ansi_style.ml  ansi_style.mli  arg_parser.ml  arg_parser.mli  built_in.ml  built_in.mli  climate.ml  climate.mli  climate_stdlib.ml  climate_stdlib.mli  command_doc_spec.ml  command_doc_spec.mli  command_line.ml  completion.ml  completion.mli  completion_spec.ml  completion_spec.mli  error.ml  error.mli  for_test.ml  help.ml  help.mli  manpage.ml  manpage.mli  name.mli  non_ret.ml  non_ret.mli  raw_arg_table.ml  raw_arg_table.mli  shell_dsl.ml  shell_dsl.mli  spec.ml  spec.mli  subcommand.ml  subcommand.mli
src/cmdliner/: climate_cmdliner.ml  climate_cmdliner.mli  dune
test/: climate_tests.ml  dune  test.ml
tests/: edge_cases.ml  parse_error.ml  parse_error_tests.ml  spec_error_tests.ml  util.ml
tests/completion_tests/: dune  helper.sh  print_completions.sh
tests/completion_tests/basic/: basic.ml  dune  test.t
tests/completion_tests/fake_git/: dune  fake_git.ml  test.t  test_minified.t
tests/unit_tests/: dune  list_.ml  pair.ml  parse_error_tests.ml  spec_error_tests.ml  util.ml
tests/usage_tests/: dune  help_messages.ml
