(executables
 (names sum)
 (libraries climate)
 (modules sum))

(executables
 (names sum2)
 (libraries climate)
 (modules sum2))

(executables
 (names op)
 (libraries climate)
 (modules op))

(executables
 (names group)
 (libraries climate)
 (modules group))

(executables
 (names optional_args)
 (libraries climate)
 (modules optional_args))

(executables
 (names fake_git)
 (libraries climate)
 (modules fake_git))
